core php updates

--- a/app/assets/manifest.json
+++ b/app/assets/manifest.json
@@ -23,7 +23,7 @@
             "type": "image/png"
         },
         {
-            "src": "/app/assets/images/logo671x671",
+            "src": "/app/assets/images/logo671x671.png",
             "sizes": "671x671",
             "type": "image/png"
         }
